--- a/HlsWinForm/HlsWinForm.csproj
+++ b/HlsWinForm/HlsWinForm.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
     
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.Certificate" Version="7.0.4" />
       <PackageReference Include="Microsoft.AspNetCore.Components.WebView.WindowsForms" Version="7.0.59" />
     </ItemGroup>
 
